rmr/rafaelia: support only app-internal license path